--- a/src/zeit/web/site/templates/inc/module/servicebox.html
+++ b/src/zeit/web/site/templates/inc/module/servicebox.html
@@ -8,7 +8,7 @@
     <div class="servicebox__column">
         {% for service in service_column %}
         {% set row_loop = loop %}
-        {% set tracking_slug = 'servicebox.{}.{}..{}'.format(column_loop.index, row_loop.index, service.id) %}
+        {% set tracking_slug = '{}.{}.{}.servicebox.{}'.format(region_loop.index, column_loop.index, row_loop.index, service.id) %}
         <a class="servicebox__link" href="{{ service.href }}" data-id="{{ tracking_slug }}">
             {{ lama.use_svg_icon('servicebox-{}'.format(service.id), 'servicebox__icon servicebox__icon--{}'.format(service.id), request) }}
             <span>{{ service.title }}</span>
