ZON-1965: Tweak clicktracking id

--- a/src/zeit/web/site/templates/inc/module/printbox.html
+++ b/src/zeit/web/site/templates/inc/module/printbox.html
@@ -44,13 +44,13 @@
                 </h2>
                 <p class="print-box__text">{{ teaser.subtitle }}</p>
             </a>
-            <a href="{{ teaser.url }}?wt_zmc=cross.int.zonpme.zeitde.printbox.ausgseite.bildtext.weitere.weitere&amp;utm_medium=cross&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=printbox&amp;utm_content=ausgseite_bildtext_weitere_weitere" class="print-box__link" data-id="{{ teaser_position }}.print-box.weitere-themen">
+            <a href="{{ teaser.url }}?wt_zmc=cross.int.zonpme.zeitde.printbox.ausgseite.bildtext.weitere.weitere&amp;utm_medium=cross&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=printbox&amp;utm_content=ausgseite_bildtext_weitere_weitere" class="print-box__link" data-id="{{ teaser_position }}.print-box.weitere_themen">
                 Weitere Themen
             </a>
             <a href="{{ teaser.url }}?wt_zmc=cross.int.zonpme.zeitde.printbox.ausgseite.bildtext.button.button&amp;utm_medium=cross&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=printbox&amp;utm_content=ausgseite_bildtext_button_button" data-id="{{ teaser_position }}.print-box.button">
                 <span class="print-box__button">Mehr erfahren</span>
             </a>
-            <a href="http://leserservice.zeit.de/diesewoche/DIE-ZEIT-kostenlos-testen/index.php?r=npb" id="intern.box.zeitde.fix.probe.homepage.leserservice.text.cross" class="print-box__link" data-id="{{ teaser_position }}.print-box.testen-sie">
+            <a href="http://leserservice.zeit.de/diesewoche/DIE-ZEIT-kostenlos-testen/index.php?r=npb" class="print-box__link" data-id="{{ teaser_position }}.print-box.testen_sie_3_wochen_die_gedruckte_zeit">
                 Testen Sie 3 Wochen die gedruckte ZEIT
             </a>
         </div>
