--- a/sass/web.site/modules/_adplaces.sass
+++ b/sass/web.site/modules/_adplaces.sass
@@ -70,7 +70,7 @@
 	// and positioning of adlabel
 	&--5-on-article
 		display: table
-		margin: remify(60px 0 28px 0)
+		margin: remify(48px 0)
 		vertical-align: middle
 		width: 100%
 		// hide original label cause we cannot position it
