--- a/src/zeit/web/site/templates/beta.html
+++ b/src/zeit/web/site/templates/beta.html
@@ -29,7 +29,7 @@
             <span class="beta-teaser__title">Beta-Test von ZEIT&nbsp;ONLINE</span>
             <p class="beta-teaser__prose">
                 Wir entwickeln die neue Version von ZEIT&nbsp;ONLINE gemeinsam mit unseren
-                Nutzerinnen und Nutzern. 
+                Nutzerinnen und Nutzern.
             </p>
             <p class="beta-teaser__prose">
                 Unsere neue Site befindet sich derzeit im Beta-Test:
@@ -38,24 +38,24 @@
                 Sie sie schon einmal ausprobieren wollen.
             </p>
             <p class="beta-teaser__prose">
-                Es gibt zwei Möglichkeiten, unsere neue Seite zu testen: 
+                Es gibt zwei Möglichkeiten, unsere neue Seite zu testen:
             </p>
             <p class="beta-teaser__prose">
-                1.  Sie können sich für den Beta-Test bewerben. Senden Sie zu diesem Zweck
+                1. Sie können sich für den Beta-Test bewerben. Senden Sie zu diesem Zweck
                 bitte eine E-Mail mit Ihrem Nutzernamen oder der E-Mail-Adresse, mit der
-                Sie in der ZEIT-ONLINE-Community angemeldet sind, an 
-                <a href="mailto:beta@zeit.de">beta@zeit.de</a>. 
+                Sie in der ZEIT&#8208;ONLINE&#8208;Community angemeldet sind, an
+                <a href="mailto:beta@zeit.de">beta@zeit.de</a>.
             </p>
             <p class="beta-teaser__prose">
-                Sollten Sie noch nicht angemeldet sein, können Sie dies 
+                Sollten Sie noch nicht angemeldet sein, können Sie dies
                 bei <a href="https://meine.zeit.de">https://meine.zeit.de</a> nachholen.
             </p>
             <p class="beta-teaser__prose">
-                Sie erhalten eine E-mail, sobald wir Sie für den Beta-Test freigeschaltet haben. 
+                Sie erhalten eine E-Mail, sobald wir Sie für den Beta-Test freigeschaltet haben.
                 Auf dieser Seite können Sie dann zwischen neuer und alter Version hin- und herschalten.
-            </p> 
+            </p>
             <p class="beta-teaser__prose">
-                2. Ein Teil unserer Nutzer wird derzeit zufällig für den Beta-Test ausgewählt. 
+                2. Ein Teil unserer Nutzer wird derzeit zufällig für den Beta-Test ausgewählt.
                 Sie erhalten dann direkt auf der Homepage einen entsprechenden Hinweis.
             </p>
             {% else %}
@@ -63,7 +63,7 @@
             <span class="beta-teaser__title">Beta-Test von ZEIT&nbsp;ONLINE</span>
             <p class="beta-teaser__prose">
                 Wir entwickeln die neue Version von ZEIT&nbsp;ONLINE gemeinsam mit unseren
-                Nutzerinnen und Nutzern. 
+                Nutzerinnen und Nutzern.
             </p>
             <p class="beta-teaser__prose">
                 Unsere neue Site befindet sich derzeit im Beta-Test:
@@ -72,25 +72,24 @@
                 Sie sie schon einmal ausprobieren wollen.
             </p>
             <p class="beta-teaser__prose">
-                Es gibt zwei Möglichkeiten, unsere neue Seite zu testen: 
+                Es gibt zwei Möglichkeiten, unsere neue Seite zu testen:
             </p>
             <p class="beta-teaser__prose">
-                1.  Sie können sich für den Beta-Test bewerben. Senden Sie zu diesem Zweck
+                1. Sie können sich für den Beta-Test bewerben. Senden Sie zu diesem Zweck
                 bitte eine E-Mail mit Ihrem Nutzernamen oder der E-Mail-Adresse, mit der
-                Sie in der ZEIT-ONLINE-Community angemeldet sind, an 
-                <a href="mailto:beta@zeit.de">beta@zeit.de</a>. 
+                Sie in der ZEIT&#8208;ONLINE&#8208;Community angemeldet sind, an
+                <a href="mailto:beta@zeit.de">beta@zeit.de</a>.
             </p>
             <p class="beta-teaser__prose">
-                Sollten Sie noch nicht angemeldet sein, können Sie dies 
+                Sollten Sie noch nicht angemeldet sein, können Sie dies
                 bei <a href="https://meine.zeit.de">https://meine.zeit.de</a> nachholen.
             </p>
             <p class="beta-teaser__prose">
-                Sie erhalten eine E-mail, sobald wir Sie für den Beta-Test freigeschaltet haben. 
-                Unter <a href="http://www.zeit.de/beta">www.zeit.de/beta</a> können Sie dann zwischen 
-                neuer und alter Version hin- und herschalten.
-            </p> 
+                Sie erhalten eine E-Mail, sobald wir Sie für den Beta-Test freigeschaltet haben.
+                Auf dieser Seite können Sie dann zwischen neuer und alter Version hin- und herschalten.
+            </p>
             <p class="beta-teaser__prose">
-                2. Ein Teil unserer Nutzer wird derzeit zufällig für den Beta-Test ausgewählt. 
+                2. Ein Teil unserer Nutzer wird derzeit zufällig für den Beta-Test ausgewählt.
                 Sie erhalten dann direkt auf der Homepage einen entsprechenden Hinweis.
             </p>
             <p class="beta-teaser__prose">
