--- a/sass/web.magazin/modules/_comments.sass
+++ b/sass/web.magazin/modules/_comments.sass
@@ -93,7 +93,7 @@ $comments-min-width: $comments__break-outside - $max-page-width
     +transition-property(transform, opacity, visibility)
     +transition-duration(0) // duration for "disappear"
     +transition-timing-function(ease-in-out)
-    +transform-origin(left, top)
+    +transform-origin(left top)
     +respond-min($comments__break-overlap)
         display: block // needed for working transition
         opacity: 0
