--- a/sass/web.site/modules/_nav.sass
+++ b/sass/web.site/modules/_nav.sass
@@ -469,7 +469,7 @@ $icon-color--hover: $zon-charcoal
 			& > a
 				box-shadow: none
 				&:after
-					+transform(rotate(180deg))
+					+drop_icon($open: true, $cross: false)
 			& > .dropdown
 				display: block
 				z-index: 2
