--- a/sass/web.site/modules/article/_article-interactions.sass
+++ b/sass/web.site/modules/article/_article-interactions.sass
@@ -57,7 +57,7 @@
 .sharing-menu--active > .sharing-menu__title
 	color: $zon_dark_grey
 	&:after
-		+transform(rotate(180deg))
+		+drop_icon($open: true)
 
 .sharing-menu--active > .sharing-menu__items,
 .no-js .sharing-menu__items // no-js fallback
