Remove link to current page

--- a/sass/web.site/modules/_pagination.sass
+++ b/sass/web.site/modules/_pagination.sass
@@ -40,9 +40,8 @@
 			padding: 0 1em
 			display: inline-block
 		&--current
-			a
-				// normal, hover, active, visited, focus
-				+link-colors($zon-charcoal, $color-link--hover, $color-link--active, $zon-charcoal, $color-link--focus)
+			span
+				color: $zon-charcoal
 				font-weight: bold
 	&__all
 		display: inline-block
