ZON-1997: Prevent Adplace from collision with marginalia

--- a/sass/web.site/modules/_adplaces.sass
+++ b/sass/web.site/modules/_adplaces.sass
@@ -93,7 +93,7 @@
 				margin-right: auto
 				max-width: remify(660px)
 	&--7-on-article
-		clear: right
+		clear: both
 		float: right
 		margin: 0 remify(60px) remify(28px) remify(36px)
 		max-width: 300px
