--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -26,9 +26,16 @@
 {%- endblock %}
 
 {% block article_pages %}
-    <div class="article-page" data-page-number="{{ view.current_page.number+1 }}">
+    <section class="article-page" data-page-number="{{ view.current_page.number+1 }}">
+        <h3 class="visually-hidden">
+        {%- if view.pagination and view.pagination.current -%}
+            Seite {{ view.pagination.current }}/{{ view.pagination.total }}: {{ view.current_page.teaser }}
+        {%- else -%}
+            Seite {{ view.page_nr }}
+        {%- endif -%}
+        </h3>
         {{ render_page(view.current_page) }}
-    </div>
+    </section>
 {% endblock article_pages %}
 
 {% block article_main_image %}
