--- a/src/zeit/web/site/templates/article_komplett.html
+++ b/src/zeit/web/site/templates/article_komplett.html
@@ -2,12 +2,14 @@
 
 {% block article_pages %}
     {% for page in view.pages %}
-        <div class="article-page" data-page-number="{{ page.number+1 }}">
+        <section class="article-page" data-page-number="{{ page.number+1 }}">
             {% if not loop.first %}
-            <h3 class="article-page__page-teaser article__item">{{ page.teaser }}</h3>
+            <h3 class="article-page__page-teaser article__item">{{ page.teaser | hide_none }}</h3>
+            {% else %}
+            <h3 class="visually-hidden">{{ view.title | hide_none }}</h3>
             {% endif %}
             {{ render_page(page) }}
-        </div>
+        </section>
     {% endfor %}
 {% endblock article_pages %}
 
