--- a/src/zeit/web/site/templates/inc/module/headerimage.html
+++ b/src/zeit/web/site/templates/inc/module/headerimage.html
@@ -1,11 +1,13 @@
-<!-- HEADERIMAGE {{module.supertitle}} {{module.title}} {{module.image}} -->
 <header class="header-image{% if module.visible_mobile == False %} mobile-hidden{% endif %}"{% if module %} data-block-type="{{ module.type | hide_none }}"{% endif %} data-unique-id="{{ module.uniqueId }}" data-meetrics="{{ area.kind }}">
     {# get the image directy from the supplied image group #}
     {% set image = module.image.uniqueId | get_variant("panorama") %}
     {# we need to explecitly pass the layout aka block class name #}
     {% set module_layout = "header-image" %}
     {% include "zeit.web.site:templates/inc/image.tpl" ignore missing %}
-    <div class="header-image__supertitle">{{ module.supertitle }}</div>
-    <h1 class="header-image__title">{{ module.title }}</h1>
+    <h1 class="header-image__heading">
+        <span class="header-image__kicker">{{ module.supertitle }}</span>
+        <span class="visually-hidden">: </span>
+        <span class="header-image__title">{{ module.title }}</span>
+    </h1>
 </header>
 
