ZON-1969: Add style

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -59,6 +59,7 @@
 @import "modules/centerpage/header"
 @import "modules/centerpage/newsticker"
 @import "modules/centerpage/section-heading"
+@import "modules/centerpage/headerimage"
 
 // video-stage
 @import "modules/video/video-stage"
