ZON-1969: Fix position attribute of header-image

--- a/sass/web.site/modules/centerpage/_headerimage.sass
+++ b/sass/web.site/modules/centerpage/_headerimage.sass
@@ -3,6 +3,7 @@
 	background: $zon_light_grey
 	margin: 0 (-$page-padding)
 	min-height: calc(100vw / 3.5) // change factor after mobile-image-format is supplied
+	position: relative
 	&__media
 		margin: 0
 	&__media-container
