ZON-1969: Fix min-height for certain breakpoint…
… and let compass do the calculation to make it work on older IE.

--- a/sass/web.site/modules/centerpage/_headerimage.sass
+++ b/sass/web.site/modules/centerpage/_headerimage.sass
@@ -2,15 +2,18 @@
 	+transform-style(preserve-3d)
 	background: $zon_light_grey
 	margin: 0 (-$page-padding)
-	min-height: calc(100vw / 3.5) // change factor after mobile-image-format is supplied
 	position: relative
 	&__media
+		min-height: calc(100vw / 3.5) // change factor after mobile-image-format is supplied
 		margin: 0
+		+respond-min($break-tablet-min)
+			min-height: rem(768px/3.5) // panorama factor
+		+respond-min($break-desktop-min)
+			min-height: rem(980px/3.5) // panorama factor
 	&__media-container
 		+teaser-image-dark-overlay($angle: 0deg)
 	&__heading
 		+transform(translateY(-50%))
-		+teaser-image-text-shadow
 		font-size: 1rem
 		margin: 0
 		position: absolute
@@ -29,17 +32,13 @@
 		letter-spacing: 0.125em
 		margin-bottom: 0.2em
 		text-transform: uppercase
+		+respond-min($break-tablet-min)
+			font-size: rem(16px)
 	&__title
 		+font-smoothing
 		color: $white
 		font-size: rem(18px)
 		font-weight: 700
 		letter-spacing: $zon-letter-spacing-m
-
-+respond-min($break-tablet-min)
-	.header-image
-		min-height: calc(100% / 3.5) // panorama factor
-		&__kicker
-			font-size: rem(16px)
-		&__title
+		+respond-min($break-tablet-min)
 			font-size: rem(36px)
