ZON-1970: Unify byline and metadata

--- a/sass/web.site/modules/teaser/_teaser-large.sass
+++ b/sass/web.site/modules/teaser/_teaser-large.sass
@@ -23,11 +23,11 @@
 		@extend %teaser-media-item !optional
 	&__text
 		@extend %teaser-text
-	&__byline
-		@extend %teaser-byline
 	&__metadata
 		@extend %teaser-metadata
+	&__byline
+		@extend %teaser-byline !optional
+	&__datetime
+		@extend %teaser-datetime !optional
 	&__commentcount
 		@extend %teaser-commentcount
-	&__datetime
-		@extend %teaser-datetime
