--- a/sass/web.site/modules/teaser/_teaser-small-minor.sass
+++ b/sass/web.site/modules/teaser/_teaser-small-minor.sass
@@ -28,12 +28,12 @@
 		@extend %teaser-title
 	&__text
 		@extend %teaser-text
-	&__byline
-		@extend %teaser-byline
 	&__metadata
 		@extend %teaser-metadata
+	&__byline
+		@extend %teaser-byline !optional
 	&__datetime
-		@extend %teaser-datetime
+		@extend %teaser-datetime !optional
 	&__commentcount
 		@extend %teaser-commentcount
 
