--- a/sass/web.site/modules/article/_nextread.sass
+++ b/sass/web.site/modules/article/_nextread.sass
@@ -24,7 +24,7 @@
 	&__metadata
 		@extend %teaser-metadata
 	&__datetime
-		@extend %teaser-datetime
+		@extend %teaser-datetime !optional
 	&__commentcount
 		@extend %teaser-commentcount
 		&:hover
