--- a/sass/web.site/modules/teaser/_teaser-fullwidth-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth-column.sass
@@ -17,12 +17,12 @@
 		@extend .teaser-large__title
 	&__text
 		@extend %teaser-text
-	&__byline
-		@extend %teaser-byline
 	&__metadata
 		@extend %teaser-metadata
+	&__byline
+		@extend %teaser-byline !optional
 	&__datetime
-		@extend %teaser-datetime
+		@extend %teaser-datetime !optional
 	&__commentcount
 		@extend %teaser-commentcount
 
