--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -71,19 +71,17 @@
 			color: $white
 		+respond-min($break-desktop-min)
 			font-size: em(18px)
-	&__byline
-		@extend %teaser-byline
 	&__metadata
 		@extend %teaser-metadata
-	&__byline,
-	&__metadata
 		+respond-min($break-tablet-min)
 			color: $zon_lighter_grey
 		+respond-min($break-desktop-min)
 			font-size: em(14px)
 			letter-spacing: 0.04em
+	&__byline
+		@extend %teaser-byline !optional
 	&__datetime
-		@extend %teaser-datetime
+		@extend %teaser-datetime !optional
 	&__commentcount
 		@extend %teaser-commentcount
 		+respond-min($break-tablet-min)
