--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -101,21 +101,20 @@
 
 %teaser-metadata
 	color: $zon_grey
-	font-size: $font-ss
-	line-height: 1.3846
+	font-size: em(14px)
+	line-height: 1.4
 	letter-spacing: $zon-letter-spacing-s
+	+respond-min($break-tablet-min)
+		font-size: em(13px)
+	*:not(:last-child):not(:empty):after
+		content: ' / '
+		opacity: .71
+		margin: 0 $micro
 
 %teaser-byline
-	@extend %teaser-metadata
-	display: block
-	margin-bottom: remify(4px)
-	&:empty
-		display: none
 
 %teaser-datetime
-	&:not(:last-child):not(:empty):after
-		content: ' / '
-		margin: 0 $micro
+	white-space: nowrap
 
 %teaser-commentcount
 	white-space: nowrap
