ZON-1970: Harmonize teaser styles

--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -38,6 +38,8 @@
 			padding: 0 em(10px) em(36px) em(36px)
 	&__heading
 		@extend %teaser-heading
+		+respond-min($break-tablet-min)
+			margin-bottom: remify(16px)
 
 	&__series-label
 		@extend %teaser-series-label
@@ -46,29 +48,26 @@
 
 	&__kicker
 		@extend %teaser-kicker
-		margin-bottom: remify(10px)
 		&--blog
 			@extend %teaser-kicker--blog
 		+respond-min($break-tablet-min)
 			color: $white
 			font-size: em(14px)
-			margin-bottom: remify(6px)
 
 	&__title
 		@extend %teaser-title
 		font-size: em(28px)
-		line-height: 1.12
 		+respond-min($break-tablet-min)
 			color: $white
 		+respond-min($break-desktop-min)
-			font-size: em(34px)
-			line-height: 1.2
+			font-size: em(32px)
 	&__combined-link
 		@extend %teaser-combined-link
 	&__text
 		@extend %teaser-text
 		+respond-min($break-tablet-min)
 			color: $white
+			margin-bottom: remify(16px)
 		+respond-min($break-desktop-min)
 			font-size: em(18px)
 	&__metadata
