--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -18,11 +18,12 @@
 		padding: $vertical-space 0
 
 %teaser-small-media
-	vertical-align: top
-	width: 100%
+	display: none
 	+respond-min($break-phablet-min)
 		display: table-cell
-		padding-right: $petite
+		margin: 0
+		padding-right: remify(20px)
+		vertical-align: top
 		width: remify(150px+20px)
 	+respond-min($break-desktop-min)
 		width: remify(250px+20px)
@@ -34,23 +35,25 @@
 
 %teaser-series-label
 	color: $zon_grey
-	font-size: remify(12px)
+	font-size: em(12px)
 	letter-spacing: $zon-letter-spacing-l
 	margin: 0 0 remify(8px)
 	text-transform: uppercase
 
 %teaser-heading
 	font-size: 1em
-	margin: 0 0 remify(6px)
+	margin: 0 0 em(6px)
+	+respond-min($break-desktop-min)
+		margin-bottom: em(10px)
 
 %teaser-kicker
 	display: block
 	color: $color-text-highlighted
-	font-size: $font-ss
+	font-size: em(13px)
 	font-weight: bold
 	letter-spacing: $zon-letter-spacing-m
 	line-height: 1.2
-	margin-bottom: em(3px, 13px)
+	margin-bottom: em(4px, 13px)
 
 %teaser-kicker--blog
 	color: $zon_dark_grey
@@ -74,7 +77,7 @@
 %teaser-title
 	display: block
 	color: $zon-charcoal
-	font-size: $font-l
+	font-size: em(20px)
 	font-weight: 700
 	letter-spacing: $zon-letter-spacing-s
 	line-height: 1.2
@@ -86,11 +89,11 @@
 
 %teaser-text
 	color: $zon_dark_grey
-	font-size: remify(17px)
+	font-size: em(17px)
 	line-height: 1.4
-	margin: 0 0 remify(4px)
+	margin: 0 0 remify(12px)
 	+respond-min($break-phablet-min)
-		font-size: remify(15px)
+		font-size: em(15px)
 
 %teaser-metadata
 	color: $zon_grey
