--- a/sass/web.site/modules/teaser/_teaser-large-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-large-column.sass
@@ -36,8 +36,8 @@
 +respond-min($break-phablet-min)
 	.teaser-large-column
 		&--has-media &__media
-			width: $teaser-column-image-width-large
-			height: $teaser-column-image-height-large
+			width: remify($teaser-column-large-image-size-phablet)
+			height: remify($teaser-column-large-image-size-phablet)
 		&--has-media &__metadata
 			min-height: initial
 			padding-right: 0
