--- a/sass/web.site/modules/teaser/_teaser-fullwidth-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth-column.sass
@@ -32,22 +32,26 @@
 +respond-min($break-phablet-min)
 	.teaser-fullwidth-column
 		&--has-media
-			min-height: $teaser-column-image-height-fullwidth * 1.2
-		&--has-media &__container
+			min-height: remify($teaser-column-fullwidth-image-size-phablet * 1.2)
+		&__container
 			max-width: 66%
-		&--has-media &__media
-			width: $teaser-column-image-width-fullwidth
-			height: $teaser-column-image-height-fullwidth
-		&--has-media &__metadata
+		&__media
+			width: remify($teaser-column-fullwidth-image-size-phablet)
+			height: remify($teaser-column-fullwidth-image-size-phablet)
+		&__metadata
 			min-height: initial
 			padding-right: 0
 
 +respond-min($break-tablet-min)
 	.teaser-fullwidth-column
 		padding: em(32px)
+		&--has-media
+			min-height: remify($teaser-column-fullwidth-image-size-tablet * 1.2)
 		&__container
 			max-width: 72%
 		&__media
+			width: remify($teaser-column-fullwidth-image-size-tablet)
+			height: remify($teaser-column-fullwidth-image-size-tablet)
 			right: 3%
 
 +respond-min($break-desktop-min)
