--- a/sass/web.site/modules/centerpage/_headerimage.sass
+++ b/sass/web.site/modules/centerpage/_headerimage.sass
@@ -1,15 +1,14 @@
 .header-image
 	+transform-style(preserve-3d)
-	background: $zon_light_grey
 	margin: 0 (-$page-padding)
 	position: relative
 	&__media
-		min-height: calc(100vw / 3.5) // change factor after mobile-image-format is supplied
+		background-color: rgb(0, 15, 20) // placeholder for image, same as default for +teaser-image-dark-overlay
+		height: 0
 		margin: 0
+		padding-bottom: 100% / 7 * 3 // image variant 'cinema'
 		+respond-min($break-tablet-min)
-			min-height: remify(768px/3.5) // panorama factor
-		+respond-min($break-desktop-min)
-			min-height: remify(980px/3.5) // panorama factor
+			padding-bottom: 100% / 7 * 2 // image variant 'panorama'
 	&__media-container
 		+teaser-image-dark-overlay($angle: 0deg)
 	&__heading
