--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -12,14 +12,15 @@
 		+font-smoothing
 		+teaser-image-text-shadow
 	&__media
+		height: 0
+		padding-bottom: calc(56.25% + 2 * #{$page-padding} * 0.5625 ) // 56.25% = 16:9; adjust for negative margin
+		background-color: $zon_lighter_grey // placeholder for image
 		margin: 0 (-$page-padding) $petite
-		min-height: calc(100vw / 1.77777) // reserve space for mobile-ish image variant
 		+respond-min($break-tablet-min)
+			background-color: rgb(0, 15, 20) // placeholder for image, same as default for +teaser-image-dark-overlay
 			margin: 0
-			min-height: remify(768px / 2.3333) // reserve space for tablet image variant
+			padding-bottom: 100% / 7 * 3
 			z-index: 1
-		+respond-min($break-desktop-min)
-			min-height: calc(#{$max-page-width} / 2.3333) // reserve space for desktop image variant
 	&__media-container
 		+respond-min($break-tablet-min)
 			+teaser-image-dark-overlay
