ZON-2010: get rid of calc() coz Android not likey
We fix the padding kerfuffle,
and thus we don't need calc anymore.

--- a/sass/web.site/modules/teaser/_blog-format.sass
+++ b/sass/web.site/modules/teaser/_blog-format.sass
@@ -3,7 +3,9 @@
 	font-size: remify(14px)
 	line-height: 1.2
 	&--fullwidth
+		padding-left: $page-padding
 		+respond-min($break-tablet-min)
+			padding-left: 0
 			color: $white
 			left: remify(32px)
 			position: absolute
