--- a/sass/web.site/modules/_adplaces.sass
+++ b/sass/web.site/modules/_adplaces.sass
@@ -103,3 +103,7 @@
 		margin: 0 auto
 		padding: remify(30px 0)
 
+// Fix hillarious unusable ad extras by iqd
++respond-min($break-mobile-ad-width)
+	body > #iqdSitebar
+		display: none
