--- a/sass/web.site/modules/teaser/_teaser-fullwidth-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth-column.sass
@@ -1,6 +1,6 @@
 .teaser-fullwidth-column
 	@extend %teaser-column
-	margin: 0 (-$page-padding)
+	margin: 0
 	&__media
 		@extend %teaser-column__media
 	&__media-item
