--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -2,10 +2,9 @@
 	@extend %teaser
 	border-bottom: 1px solid $zon_light_grey
 	padding: 0 0 $vertical-space
+	margin: 0
 	+respond-min($break-areas)
 		border-bottom: none
-		margin-left: -$page-padding
-		margin-right: -$page-padding
 		overflow: hidden
 		padding: 0
 		position: relative
