--- a/sass/web.site/modules/teaser/_teaser-classic.sass
+++ b/sass/web.site/modules/teaser/_teaser-classic.sass
@@ -3,17 +3,21 @@ $classic-padding: remify(20px)
 .teaser-classic
 	@extend %teaser
 	border-bottom: 1px solid $zon_light_grey
+	margin: 0
 	+respond-min($break-areas)
 		border-bottom: none
+		padding-left: $page-padding
+		padding-right: $page-padding
 	&__container
 		overflow: hidden
 	&__media
 		@extend %teaser-media
-		min-height: calc(100vw / 1.77777) // reserve space for mobile-ish image variant
+		background-color: $zon_lighter_grey // placeholder for image
+		height: 0
+		padding-bottom: 100% / 16 * 9 // image variant 'wide'
+		overflow: hidden
 		+respond-min($break-tablet-min)
-			min-height: remify(768px / 2.3333) // reserve space for tablet image variant
-		+respond-min($break-desktop-min)
-			min-height: calc(#{$max-page-width} / 2.3333) // reserve space for desktop image variant
+			padding-bottom: 100% / 7 * 3 // image variant 'cinema'
 	&__media-item
 		@extend %teaser-media-item !optional
 	&__series-label
