ZON-2010: from crapshot to snapshot
sorry … :(

--- a/sass/web.site/modules/centerpage/_section-heading.sass
+++ b/sass/web.site/modules/centerpage/_section-heading.sass
@@ -1,5 +1,5 @@
 .section-heading
-	padding: remify(24px) 0
+	padding: remify(24px) $page-padding
 	position: relative
 	&__title
 		font-size: remify(21px)
@@ -17,7 +17,7 @@
 		letter-spacing: $zon-letter-spacing-s
 		line-height: 1
 		position: absolute
-		right: 0
+		right: $page-padding
 
 		+link
 			color: $zon_dark_grey
