--- a/sass/web.site/modules/teaser/_teaser-gallery.sass
+++ b/sass/web.site/modules/teaser/_teaser-gallery.sass
@@ -68,8 +68,8 @@ $break-gallery-teasers: $break-phablet-min
 
 	&__figurewrapper
 		position: relative
-		// min-height in case the image is not loaded (yet)
-		min-height: 3rem
+		height: 0
+		padding-bottom: 100% / 16 * 9
 
 	&__icon
 		position: absolute
