--- a/sass/web.site/modules/video/_video-stage-main.sass
+++ b/sass/web.site/modules/video/_video-stage-main.sass
@@ -1,7 +1,7 @@
 .video-stage-main
-	margin: 0
-	padding: 0
+	+respond-min($break-phablet-min)
+		padding: 0 $page-padding
 	+respond-min($break-desktop-min)
 		display: table-cell
-		padding: remify($wide--px) remify(20px) 0 0
-		width: remify(620px + 20px)
+		padding: remify(72px) remify(20px) 0 $page-padding
+		width: remify(620px + 20px +20px)
