--- a/sass/web.site/modules/video/_video-stage-secondary.sass
+++ b/sass/web.site/modules/video/_video-stage-secondary.sass
@@ -4,6 +4,7 @@
 		+justify-children-horizontally('.video-small', top)
 		display: block
 		margin-bottom: (-$page-padding)
+		padding: 0 $page-padding
 	+respond-min($break-desktop-min)
 		background-color: #28282e
 		display: table-cell
