ZON-2023: video stage: reserve vertical space

--- a/sass/web.site/modules/video/_video-thumbnail.sass
+++ b/sass/web.site/modules/video/_video-thumbnail.sass
@@ -2,6 +2,9 @@
 	background-color: $black
 	margin: 0
 	position: relative
+	height: 0
+	overflow: hidden
+	padding-bottom: 100% / 16 * 9
 	&:after
 		bottom: 0
 		content: ''
