ZON-1932: put icon on teasers for video pages

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -40,6 +40,7 @@
 @import "modules/teaser/teaser-square"
 @import "modules/teaser/teaser-gallery"
 @import "modules/teaser/teaser-classic"
+@import "modules/teaser/teaser-image-icon"
 
 // journalistic format marker
 @import "modules/teaser/blog-format"
