--- a/sass/web.site/modules/video/_video-stage-main.sass
+++ b/sass/web.site/modules/video/_video-stage-main.sass
@@ -3,5 +3,5 @@
 		padding: 0 $page-padding
 	+respond-min($break-desktop-min)
 		display: table-cell
-		padding: remify(72px) remify(20px) 0 $page-padding
+		padding: remify(72px) $page-padding 0
 		width: remify(620px + 20px +20px)
