ZON-2065: Use project specific color constants

--- a/sass/web.site/modules/comments/_comment.sass
+++ b/sass/web.site/modules/comments/_comment.sass
@@ -113,9 +113,9 @@ $color-comment-border: $zon_light_grey
 	&__reaction,
 	&__date
 		+link
-			color: $grey
+			color: $zon_grey
 		+on-interaction
-			color: $grey--mid
+			color: $zon_dark_grey
 		font-size: remify(13px)
 		letter-spacing: $zon-letter-spacing-s
 
