--- a/sass/web.site/modules/centerpage/_section-heading.sass
+++ b/sass/web.site/modules/centerpage/_section-heading.sass
@@ -1,6 +1,9 @@
 .section-heading
 	padding: remify(24px) $page-padding
 	position: relative
+	&--unpadded
+		padding-left: 0
+		padding-right: 0
 	&__title
 		font-size: remify(21px)
 		font-weight: 700
