--- a/src/zeit/web/site/templates/inc/area/newsticker.html
+++ b/src/zeit/web/site/templates/inc/area/newsticker.html
@@ -2,7 +2,7 @@
 
 {% block before_module_list %}
     {% set tracking_slug = '{}...{}.{}'.format(region_loop.index, 'newsteaser', 'alle_schlagzeilen') %}
-    {{ cp.section_heading(area.title, 'Alle Schlagzeilen', 'news/index', view, tracking_slug) }}
+    {{ cp.section_heading(area.title, 'Alle Schlagzeilen', 'news/index', view, tracking_slug, unpadded=True) }}
 {% endblock %}
 
 {% block module_list %}
