--- a/sass/web.site/modules/centerpage/_servicebox.sass
+++ b/sass/web.site/modules/centerpage/_servicebox.sass
@@ -2,6 +2,8 @@
 	display: none
 	+respond-min($break-tablet-min)
 		display: block
+		padding-left: $page-padding
+		padding-right: $page-padding
 	&__column
 		float: left
 		width: 25%
