--- a/sass/web.site/modules/centerpage/_section-heading.sass
+++ b/sass/web.site/modules/centerpage/_section-heading.sass
@@ -22,6 +22,9 @@
 		position: absolute
 		right: $page-padding
 
+		&--unpadded
+			right: 0
+
 		+link
 			color: $zon_dark_grey
 		+on-interaction
